tests/rosetta/out/Rust/array-length.error
rustc: exit status 1
error: cast cannot be followed by a method call
 --> /tmp/array-length.rs:5:148
  |
5 | ..., format!("{}{}", "Length of ", arr.to_string()), " is "), arr.len() as i32.to_string()), "."))].into_iter().filter(|s| !s.is_empty())...
  |                                                               ^^^^^^^^^^^^^^^^
  |
help: try surrounding the expression in parentheses
  |
5 |         println!("{}", vec![format!("{}", format!("{}{}", format!("{}{}", format!("{}{}", format!("{}{}", "Length of ", arr.to_string()), " is "), (arr.len() as i32).to_string()), "."))].into_iter().filter(|s| !s.is_empty()).collect::<Vec<_>>().join(" ") );
  |                                                                                                                                                    +                +

error[E0599]: the method `to_string` exists for struct `Vec<&str>`, but its trait bounds were not satisfied
 --> /tmp/array-length.rs:5:125
  |
5 | ...("{}{}", "Length of ", arr.to_string()), " is "), arr.len() as i32.to_string()), "."))].into_iter().filter(|s| !s.is_empty()).collect:...
  |                               ^^^^^^^^^ method cannot be called on `Vec<&str>` due to unsatisfied trait bounds
  |
  = note: the following trait bounds were not satisfied:
          `Vec<&str>: std::fmt::Display`
          which is required by `Vec<&str>: ToString`
          `[&str]: std::fmt::Display`
          which is required by `[&str]: ToString`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0599`.
